--- a/test1.ui
+++ b/test1.ui
@@ -24,7 +24,8 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-image: url(:/newPrefix/hoachaton.png);</string>
+     <string notr="true">background-image: url(:/newPrefix/hoachaton.png);
+background-color: transparent;</string>
     </property>
     <property name="text">
      <string/>
